<resources>
    <string name="app_name">农家购</string>
    <string name="orcdercartitle">我想买</string>
    <string name="dpayorder">待付款订单</string>
    <string name="itemtitle1">莴笋咸菜</string>
    <string name="title_activity_order">确认订单</string>
    <string name="title1">今日推荐</string>
    <string name="title2">销售商品</string>
    <string name="delbtn">全部删除</string>
    <string name="allbtn">全选</string>
    <string name="loadfail">数据加载失败，请检查网络状态！</string>
    <string name="upfail">抱歉，数据上传失败，点击刷新按钮重试！</string>
    <string name="emptydata">暂无数据！</string>
    <string name="freshbtn">点我刷新数据</string>
    <string name="upagain">再试一次</string>
    <string name="loginbtn">点击登录</string>
    <string name="proaddr">产地:</string>
    <string name="prodesc">详情:</string>
    <string name="acc_nbr">请输入手机号</string>
    <string name="saleacct">账户金额</string>
    <string name="chrgdetail">收支明细</string>
    <string name="exchgdetail">交易明细</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_order_acitvity">确认订单</string>
    <string name="title_activity_test_action_bar">TestActionBar</string>
    <string name="title_activity_order_car">购物车</string>
    <string name="title_activity_login">农家购</string>
    <string name="title_detail_activity">农家购</string>

    <string name="querytext">输入查询关键字</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">请输入11位手机号</string>
    <string name="error_invalid_password">密码必须大于等于6位</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="password_field_required">密码不能为空</string>
    <string name="phone_field_required">手机号不能为空</string>
    <string name="error_incorrect">手机号或密码不正确</string>
    <string name="error_incorrect2">网络不可用，请检查网络状态！</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sale_acct_detail">账户中心</string>
    <string name="title_activity_act_test">ActTest</string>
    <string name="title_activity_my_saled_thing">我卖的货</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
