<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:id="@+id/stateview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
    </FrameLayout>
<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainlayout"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <SearchView
                android:id="@+id/mainsearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/searchheight"
                android:iconifiedByDefault="false"
                android:queryHint="@string/querytext">
            </SearchView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v4.view.ViewPager
                android:id="@+id/vpager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewpager">
            </android.support.v4.view.ViewPager>
            <LinearLayout
                android:id="@+id/vpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"></LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/iv_njzc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/titleheight"
            android:background="@color/title"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title1"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/headtext1" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line1" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/importseller"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemheight">
        </android.support.v7.widget.RecyclerView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/titleheight"
            android:background="@color/title"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title2"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/headtext1" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line1" />
            </LinearLayout>
        </LinearLayout>

<android.support.v7.widget.RecyclerView
    android:id="@+id/salelist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/bottom">
</android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

    </RelativeLayout>